--- a/HJF_Rworkshop_08242023_pt1.html
+++ b/HJF_Rworkshop_08242023_pt1.html
@@ -164,6 +164,12 @@ Type in folder name and choose parent directory
 
 &lt;img src="module01_Rworkshop01.png" width="=80%" /&gt;
 
+---
+
+# Download "module01_Rscript.R" and place in this folder
+
+
+
 
 ---
 
