update readme links

--- a/HJF_Rworkshop_08242023_pt1.html
+++ b/HJF_Rworkshop_08242023_pt1.html
@@ -169,7 +169,7 @@ Type in folder name and choose parent directory
 # Download "module01_Rscript.R" and place in this folder
 
 
-
+&lt;img src="module01_saveLink.png" width="=80%" /&gt;
 
 ---
 
