add files redo readme links and menu

--- a/HJF_Rworkshop_08242023_pt2.html
+++ b/HJF_Rworkshop_08242023_pt2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>R, RStudio - understanding Packages (part 2)</title>
+    <title>R, RStudio - understanding Packages</title>
     <meta charset="utf-8" />
     <meta name="author" content="Melinda Higgins" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -21,7 +21,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# R, RStudio - understanding Packages (part 2)
+# R, RStudio - understanding Packages
 ]
 .subtitle[
 ## R Workshop: August 24, 2023
